# esp32-idf-no-std-rust-component

./: .gitignore  CMakeLists.txt  README.md  cargo-generate.toml  diagram.json  sdkconfig  wokwi.toml
.github/workflows/: ci.yml
components/esp_rust_component/: CMakeLists.txt  esp_rust_component.c
components/esp_rust_component/include/: esp_rust_component.h
components/esp_rust_component/rust_crate/: Cargo.toml
components/esp_rust_component/rust_crate/src/: lib.rs
components/georgik__spooky_core/: CMakeLists.txt  idf_component.yml
components/georgik__spooky_core/include/: test_cmp.h
components/georgik__spooky_core/rust_hello/: Cargo.toml  rust-toolchain.toml
components/georgik__spooky_core/rust_hello/.cargo/: config.toml
components/georgik__spooky_core/rust_hello/src/: lib.rs
main/: CMakeLists.txt  esp_idf_project.c  idf_component.yml  my_esp_app.c
