[package]
name = "rust_crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
nmea = { version = "0.6.0", default-features=false, features = ["GNSS", "GGA"] }
# nmea = { path = "../../../../nmea", default-features=false, features = ["GNSS", "GGA"] }
# chrono = { version = "*", default-features = false, features = ["rkyv"] }
esp-alloc = "0.3.0"
heapless = "0.7.16"
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
# hal = { package = "esp32-hal", version = "0.15.0"  }
# critical-section = "1.1.2"
# esp-println = { version = "0.6.0",  features = ["esp32c3"] }

[features]
default = [ ]

